[gd_scene load_steps=2 format=3 uid="uid://bcypq6v80pymk"]

[ext_resource type="Script" uid="uid://silvb7ur8lws" path="res://settings_menu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Display" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="ResolutionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VSyncCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "VSync"

[node name="MSAALabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "Anti-Aliasing (MSAA):"

[node name="MSAAOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer"]
layout_mode = 2

[node name="Graphics" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="QualityPresetLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
text = "Quality Preset:"

[node name="QualityPresetOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="ShadowQualityLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
text = "Shadow Quality:"

[node name="ShadowQualityOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="FogCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
text = "Distance Fog"

[node name="CloudCountLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
text = "Cloud Count: 20"

[node name="CloudCountSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
min_value = 5.0
max_value = 50.0
step = 5.0
value = 20.0

[node name="ViewDistanceLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
text = "View Distance: 4 chunks"

[node name="ViewDistanceSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 10.0
value = 4.0

[node name="Performance" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Performance"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="MaxFPSLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Performance/VBoxContainer"]
layout_mode = 2
text = "Max FPS:"

[node name="MaxFPSOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Performance/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ApplyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Defaults"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"
